# rust_criterion_bench_comparing_fn

./: COMMAND_PATH_Of_PROJECT.md  Cargo.toml  FROM_HERE.md  MARKDOWN_COMMAND_OVERVIEW.md  README.md
benches/: my_benchmark.rs
examples/: main_result_four.rs  main_result_one.rs  main_result_second.rs  main_result_third.rs
src/: lib.rs  main.rs
