[package]
name = "rust_criterion_bench_comparing_fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false

[[example]]
name="main_result_one"
